[package]
name = "catsay"
version = "0.1.0"
authors = ["Triomphe Ramandalahy <triompherivo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "0.11.1"
predicates = "1.0.0"
